# muxa

./: CLAUDE.md  Cargo.toml  clippy.toml  justfile
crates/diesel-sentry/: Cargo.toml
crates/diesel-sentry/src/: lib.rs
crates/muxa/: Cargo.toml
crates/muxa-core/: Cargo.toml
crates/muxa-core/src/: app.rs  capability.rs  config.rs  ctx.rs  error.rs  lib.rs  mode.rs  plugin.rs  state.rs
crates/muxa-diesel/: Cargo.toml
crates/muxa-diesel/src/: lib.rs  migrations.rs  pg.rs
crates/muxa-openapi/: Cargo.toml
crates/muxa-openapi/src/: lib.rs
crates/muxa-otel/: Cargo.toml
crates/muxa-otel/src/: lib.rs
crates/muxa-pgmq/: Cargo.toml
crates/muxa-pgmq/src/: lib.rs
crates/muxa-pgmq/tests/: compose.rs
crates/muxa-sentry/: Cargo.toml
crates/muxa-sentry/src/: lib.rs
crates/muxa-sqlx/: Cargo.toml
crates/muxa-sqlx/src/: lib.rs  pg.rs  sqlite.rs
crates/muxa-sqlx/tests/: capability.rs
crates/muxa-telemetry/: Cargo.toml
crates/muxa-telemetry/src/: lib.rs
crates/muxa-web/: Cargo.toml
crates/muxa-web/src/: banner.rs  lib.rs  ratelimit.rs
crates/muxa/examples/: hello.rs  muxa.toml  web_only.rs
crates/muxa/examples/diesel_widgets/: docker-compose.yml  main.rs  muxa.toml
crates/muxa/examples/diesel_widgets/migrations/00000000000001_create_widgets/: up.sql
crates/muxa/src/: lib.rs
examples/hello/: Cargo.toml
examples/hello/src/: main.rs
