[package]
name = "muxa-telemetry"
description = "Telemetry kernel for muxa — owns the global tracing-subscriber and a typed-slot registry for plugins to attach known layers (sentry-tracing, tracing-opentelemetry, …)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []

# Reserve a `reload::Handle<Option<sentry_tracing::SentryLayer<Registry>>>`
# slot in the subscriber. `muxa-sentry`'s `tracing-bridge` feature
# activates this via feature linking and fills the slot with
# `sentry_tracing::layer()` during plugin build.
sentry = ["dep:sentry-tracing"]

[dependencies]
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "registry", "std"] }
sentry-tracing     = { workspace = true, optional = true }

[lints]
workspace = true
