[package]
name = "hello"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
# Sessionless flavour: web + otel + an in-memory SQLite pool. No pgmq
# (Postgres-only), no auth (sessions are out of scope for now).
muxa    = { workspace = true, features = ["web", "sqlite", "otel"] }
tokio   = { workspace = true, features = ["macros", "rt-multi-thread"] }
axum    = { workspace = true }
serde   = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
